@@ -96,6 +96,14 @@
   harder to break code by accidentally forgetting to call
   InitSemaphore() after having allocated the memory for it.
 
+- Rewrote the code that allocates the file descriptor and file
+  buffer tables so that all the memory allocations are in one
+  place and it's possible to specify exactly how many table
+  entries are required at a time.
+
+- Creation and initialization of semaphores now uses the AmigaOS4
+  specific functions for this purpose, if available.
+
 
 c.lib 1.188 (7.2.2005)
 
